some modifications in font size and button color in space

--- a/src/app/client/src/app/modules/core/components/space-data-driven-filter/space-data-driven-filter.component.scss
+++ b/src/app/client/src/app/modules/core/components/space-data-driven-filter/space-data-driven-filter.component.scss
@@ -38,6 +38,10 @@
     cursor: pointer;
     color: white !important ;
 }
+.cstmresetbtn {
+    color: rgb(133, 90, 159)!important;
+      border: 1px solid rgb(133, 90, 159);
+  }
 @media screen and (min-width: 320px) and (max-width: 1023px) {
 
     .ui.column.grid>[class*="three wide"].column, .ui.grid>.column.row>[class*="three wide"].column, .ui.grid>.row>[class*="three wide"].column, .ui.grid>[class*="three wide"].column {
