--- a/src/app/client/src/app/modules/core/components/space-main-menu/space-main-menu.component.html
+++ b/src/app/client/src/app/modules/core/components/space-main-menu/space-main-menu.component.html
@@ -44,7 +44,7 @@
                                       <button [disabled]="loading" id="close" class="btn btn-purple float-lg-right mr-10 text-center py-2" appTelemetryInteract
                                       [telemetryInteractEdata]="feedbackSubmitInteractEdata">	SEND </button>										
                                   </div>
-                                <input type="submit" value="CLOSE" id="close" (click)="d('Cross click')"  class="btn btn-lightgrey text-center mr-10 float-lg-right py-2" appTelemetryInteract [telemetryInteractEdata]="feedbackCloseInteractEdata">
+                                <input type="submit" value="CLOSE" id="close" (click)="d('Cross click')"  class="btn closebtn btn-lightgrey text-center mr-10 float-lg-right py-2" appTelemetryInteract [telemetryInteractEdata]="feedbackCloseInteractEdata">
       
                         </div>
           
