--- a/src/app/client/src/app/modules/public/components/licensepolicy/licensepolicy.component.scss
+++ b/src/app/client/src/app/modules/public/components/licensepolicy/licensepolicy.component.scss
@@ -25,7 +25,7 @@
   }
 .text-ac {
   font-family: 'Roboto Slab';
-  // font-weight: bold;
+   font-weight: bold;
 }
   ul li {
     margin-bottom: 0;
