--- a/src/app/client/src/app/modules/core/components/space-main-menu/space-main-menu.component.scss
+++ b/src/app/client/src/app/modules/core/components/space-main-menu/space-main-menu.component.scss
@@ -78,6 +78,11 @@ a.item {
   font-family: 'Roboto Slab' !important;
   font-size: 1.2em;
 }
+.closebtn {
+  background-color: white !important;
+    color: rgb(133, 90, 159)!important;
+    border: 1px solid rgb(133, 90, 159);
+}
 .head{
   font-family: 'Muli', sans-serif;
   font-size: 26px;
