--- a/src/app/client/src/app/modules/public/components/explore-thinking/explore-thinking.component.scss
+++ b/src/app/client/src/app/modules/public/components/explore-thinking/explore-thinking.component.scss
@@ -24,7 +24,7 @@
   }
   .text-ac {
     font-family: 'Roboto Slab';
-    // font-weight: bold;
+     font-weight: bold;
   }
   li {
     line-height: 2em;
