--- a/src/app/tenant/space/index.html
+++ b/src/app/tenant/space/index.html
@@ -233,11 +233,12 @@
 					</div> -->
 					<div class="col-lg-3 col-md-4 col-sm-12 text-pp mt-15">
 						<div class="row r">
-							<h5 class="footer__title" style="font-family: 'Muli', sans-serif;">Contact Us</h5>
+							<h5 class="footer__title" style="font-family: 'Roboto Slab';
+							color: #707070 !important;">Contact Us</h5>
 						</div>
 						<div class="row">
 							<div>
-								<p class="footer__right__content" style="font-family: 'Muli', sans-serif;">Ekstep
+								<p class="footer__right__content" style="font-family: 'Montserrat Light';">Ekstep
 									Foundation <br>
 									Quorum, No. 85, 7th Cross, 4th Block<br>
 									Koramangala, Bangalore - 560034<br>
