new space theme

--- a/src/app/client/src/app/modules/core/components/space-data-driven-filter/space-data-driven-filter.component.scss
+++ b/src/app/client/src/app/modules/core/components/space-data-driven-filter/space-data-driven-filter.component.scss
@@ -16,6 +16,11 @@
     font-family: 'Muli', sans-serif;
 
 }
+.closebtn {
+    background-color: white !important;
+      color: rgb(133, 90, 159)!important;
+      border: 1px solid rgb(133, 90, 159);
+  }
 .field {
     label {
         font-family: 'Roboto Slab' !important;
