--- a/src/app/client/src/app/modules/myassets/components/space-data-driven/space-data-driven.component.scss
+++ b/src/app/client/src/app/modules/myassets/components/space-data-driven/space-data-driven.component.scss
@@ -25,7 +25,7 @@ label {
   border: none;
   border-radius: 5px;
   height: 40px;
-  font-family: "Muli",sans-serif;
+  font-family: 'Montserrat';
   font-size: 15px;
   text-transform: uppercase;
   font-weight: 700;
@@ -33,17 +33,17 @@ label {
   cursor: pointer;
 }
 .btn-outline :hover{
-    background-color:  #a8abe3 !important;
-    border-color:  #a8abe3 !important;
+    background-color:  #865BA0 !important;
+    border-color:  #865BA0 !important;
     color: white
 }
 .btn-outline {
-    color: #a8abe3;
+    color: #865BA0;
     padding: 9px 30px;
-    border-color:  #a8abe3 !important;
+    border-color:  #865BA0 !important;
   border-radius: 5px;
   height: 40px;
-  font-family: "Muli",sans-serif;
+  font-family: 'Montserrat';
   font-size: 15px;
   width: 120px;
   text-transform: uppercase;
