--- a/src/app/client/src/app/modules/myassets/components/update-resoure-form/update-resoure-form.component.scss
+++ b/src/app/client/src/app/modules/myassets/components/update-resoure-form/update-resoure-form.component.scss
@@ -15,7 +15,13 @@
     cursor: pointer;
     padding: 12px 10px !important;
 }
-
+.field {
+    label {
+        font-family: 'Roboto Slab';
+        font-size: 1.25em;
+        font-weight: 400;
+    }
+}
 hr {
     border-top: 1px solid rgba(0,0,0,.1);
 }
