--- a/src/app/client/src/app/modules/public/components/explore-thinking/explore-thinking.component.scss
+++ b/src/app/client/src/app/modules/public/components/explore-thinking/explore-thinking.component.scss
@@ -20,7 +20,11 @@
     margin: auto;
     display: block;
     font-size: 17px;
-    font-family: 'Muli', sans-serif;
+    font-family: 'Montserrat';
+  }
+  .text-ac {
+    font-family: 'Roboto Slab';
+    font-weight: bold;
   }
   li {
     line-height: 2em;
