--- a/src/app/client/src/app/modules/public/components/licensepolicy/licensepolicy.component.scss
+++ b/src/app/client/src/app/modules/public/components/licensepolicy/licensepolicy.component.scss
@@ -20,8 +20,12 @@
     margin: auto;
     display: block;
     font-size: 17px;
-    font-family: 'Muli', sans-serif;
-    line-height: 2em;
+    line-height: 2rem;
+    font-family: 'Montserrat';
+  }
+  .text-ac {
+    font-family: 'Roboto Slab';
+    font-weight: bold;
   }
   ul li {
     margin-bottom: 0;
