--- a/src/app/client/src/app/modules/spacehome/component/space-main-home/space-main-home.component.scss
+++ b/src/app/client/src/app/modules/spacehome/component/space-main-home/space-main-home.component.scss
@@ -22,13 +22,13 @@
      margin: auto;
      display: block;
      font-size: 17px;
-     font-family: 'Muli', sans-serif;
+     font-family: 'Montserrat';
      margin-bottom: 1rem !important;
  }
  .fa-1{
   font-size: 32px;
   font-weight: 700;
-  font-family: 'Muli',sans-serif,Bold;
+  font-family: 'Roboto Slab',Bold;
   margin-bottom: 0!important;
  }
  .text-1{
@@ -40,14 +40,14 @@ p {
   margin: 0 0 1rem;
   line-height: 1.7em;
 }
- .text-c {
-  width: 54rem;
-  margin: auto;
-  display: block;
-  font-size: 17px;
-  font-family: 'Muli',sans-serif;
-  margin-bottom: 1rem!important;
- }
+//  .text-c {
+//   width: 54rem;
+//   margin: auto;
+//   display: block;
+//   font-size: 17px;
+//   font-family: 'Muli',sans-serif;
+//   margin-bottom: 1rem!important;
+//  }
  .pb-5 {
   padding-bottom: 5px!important;
 }
