--- a/src/app/client/src/app/plugins/profile/components/profile-page/profile-page.component.scss
+++ b/src/app/client/src/app/plugins/profile/components/profile-page/profile-page.component.scss
@@ -23,7 +23,13 @@
   .profile-bg-c-4 {
     background: #E0EFFF !important;
   }
-
+  span {
+    font-family: 'Montserrat' !important;
+  }
+  .card , .username {
+    font-family: 'Roboto Slab';
+    font-weight: 400;
+  }
   .ui.dodger-blue.basic.label {
     border: 1px solid #024f9d!important;
     border-radius: 4px;
