--- a/src/app/tenant/space/index.html
+++ b/src/app/tenant/space/index.html
@@ -75,7 +75,7 @@
 			<div class="ui logo d-flex flex-ai-center row">
 					<div class="col-2">
 							<span class="navbar-brand ">
-									<a class="flex-ai-center ml-10"><img class="image centered cursor-pointer ml-10" src="images/space_logo.png" alt="sunbird.ins"></a>
+									<a class="flex-ai-center ml-10"><img class="image centered cursor-pointer ml-10" src="images/spacelogonew.png" alt="sunbird.ins"></a>
 								</span>
 							</div>
 							<div class="col navbar-toggle collapsed">
@@ -120,10 +120,10 @@
 				<div id="owl-demo" class="owl-carousel slideshow-carousel">
 					<!-- SlideShow Item-->
 					<!-- <div class="container"> -->
-					<div class="item"><img src="images/banner_bg.jpg" alt="The Last of us">
+					<div class="item"><img src="images/spacebannernew.jpg" alt="The Last of us">
 						<div class="slide-details text-center text-white">
 							<div class="container-1">
-								<p class="fax"> Welcome to Societal Platform Assets Collaboration Environment</p>
+								<!-- <p class="fax"> Welcome to Societal Platform Assets Collaboration Environment</p> -->
 								<p class="text"> A place to search, discover and share assets including concepts, methods, processes, software, hardware and data.
 								</p>
 								<br> <button class="ui explore btn btn-purple button flex-as-center mr-20" tabindex="0"
@@ -133,7 +133,7 @@
 							</div>
 						</div>
 					</div>
-					<!-- <div class="item"><img src="images/banner_bg.jpg" alt="GTA V">
+					<!-- <div class="item"><img src="images/spacebannernew.jpg" alt="GTA V">
 						<div class="slide-details text-center text-white">
 							<div class="container">
 								<p class="fax2">Explore Thinking</p>
@@ -148,7 +148,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="item"><img src="images/banner_bg.jpg" alt="Mirror Edge">
+					<div class="item"><img src="images/spacebannernew.jpg" alt="Mirror Edge">
 						<div class="slide-details text-center text-white">
 							<div class="container">
 								<p class="fax2">Core Values</p>
@@ -162,7 +162,7 @@
 						</div>
 					</div>
 
-					<div class="item"><img src="images/banner_bg.jpg" alt="Mirror Edge">
+					<div class="item"><img src="images/spacebannernew.jpg" alt="Mirror Edge">
 						<div class="slide-details text-center text-white">
 							<div class="container">
 								<p class="fax">Framework</p>
@@ -233,11 +233,12 @@
 					</div> -->
 					<div class="col-lg-3 col-md-4 col-sm-12 text-pp mt-15">
 						<div class="row r">
-							<h5 class="footer__title" style="font-family: 'Muli', sans-serif;">Contact Us</h5>
+							<h5 class="footer__title" style="font-family: 'Roboto Slab';
+							color: #707070 !important;">Contact Us</h5>
 						</div>
 						<div class="row">
 							<div>
-								<p class="footer__right__content" style="font-family: 'Muli', sans-serif;">Ekstep
+								<p class="footer__right__content" style="font-family: 'Montserrat Light';">Ekstep
 									Foundation <br>
 									Quorum, No. 85, 7th Cross, 4th Block<br>
 									Koramangala, Bangalore - 560034<br>
