--- a/src/app/client/src/app/modules/public/components/common-license/common-license.component.css
+++ b/src/app/client/src/app/modules/public/components/common-license/common-license.component.css
@@ -22,8 +22,12 @@
     margin: auto;
     display: block;
     font-size: 17px;
-    font-family: 'Muli', sans-serif;
     line-height: 2em;
+    font-family: 'Montserrat';
+  }
+  .text-ac {
+    font-family: 'Roboto Slab';
+    font-weight: bold;
   }
   ol li {
     line-height: 2em;
