--- a/src/app/client/src/app/modules/public/module/explore/components/explore-detail-page/explore-detail-page.component.scss
+++ b/src/app/client/src/app/modules/public/module/explore/components/explore-detail-page/explore-detail-page.component.scss
@@ -42,6 +42,9 @@
  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
  font-family: 'Roboto Slab';
 }
+.card-body {
+  font-family: 'Montserrat Light' !important;
+}
 
 #stylefav {
   border-radius: 50%;
