--- a/src/app/client/src/app/modules/resource/components/shared-detail-page/shared-detail-page.component.scss
+++ b/src/app/client/src/app/modules/resource/components/shared-detail-page/shared-detail-page.component.scss
@@ -28,6 +28,9 @@
     list-style: none;
     font-family: 'Montserrat' !important;
   }
+  .card-body {
+    font-family: 'Montserrat Light' !important;
+  }
   h5 {
     padding-top: 0.5rem;
     float: left;
