--- a/src/app/client/src/app/modules/resource/components/shared-detail-page/shared-detail-page.component.scss
+++ b/src/app/client/src/app/modules/resource/components/shared-detail-page/shared-detail-page.component.scss
@@ -30,6 +30,9 @@
   }
   .card-body {
     font-family: 'Montserrat Light' !important;
+    p {
+      font-size: 15px;
+    }
   }
   h5 {
     padding-top: 0.5rem;
