asset detail body font size updated

--- a/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.scss
+++ b/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.scss
@@ -183,6 +183,9 @@ button {
   height: 17rem;
   // font-family: 'Montserrat';
   font-family: 'Montserrat Light' !important;
+  p {
+    font-size: 15px;
+  }
 }
 .btn-sec {
   background-color: #865BA0 !important;
