updated header css and font style

--- a/src/app/client/src/app/modules/core/components/space-footer/space-footer.component.scss
+++ b/src/app/client/src/app/modules/core/components/space-footer/space-footer.component.scss
@@ -85,8 +85,8 @@ a:hover, a:active {
 }
 .ft-1 a {
     text-decoration: none;
-    font-size: 15.6px !important;
-    font-family: 'Roboto Slab';
+    font-size: 1.3em !important;
+    font-family: 'Montserrat Light';
     color: #707070 !important;
     cursor: pointer;
 }
