--- a/src/app/client/src/app/modules/core/components/space-main-menu/space-main-menu.component.html
+++ b/src/app/client/src/app/modules/core/components/space-main-menu/space-main-menu.component.html
@@ -1,4 +1,4 @@
-<div class="ui text menu m-0 flex-jc-center d-flex computer only" *ngIf="userService.loggedIn">
+<div style="border: none;box-shadow: none;" class="ui text2 menu m-0 flex-jc-center d-flex computer only" *ngIf="userService.loggedIn">
     <!-- <a class="item" appTelemetryInteract [telemetryInteractEdata]="homeMenuIntractEdata" [class.active]="router.isActive('/search/All') || router.isActive('/home')" routerLink="/home">
       {{resourceService?.frmelmnts?.tab?.home}}
     </a> -->
