--- a/src/app/client/src/app/modules/core/components/space-prominent-filter/space-prominent-filter.component.scss
+++ b/src/app/client/src/app/modules/core/components/space-prominent-filter/space-prominent-filter.component.scss
@@ -42,6 +42,9 @@
     padding-top: 1rem;
     padding-bottom: 1rem;
 }
+#search {
+    margin-top: 31px !important;
+}
 @media screen and (min-width:312px) and (max-width:424px) {
     .prominent-filter {
         width: 100vw;
