--- a/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.scss
+++ b/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.scss
@@ -14,6 +14,9 @@ i.fas.fa-database.fa-lg {
     width: fit-content; 
     margin-top: 1rem
   }
+  // i {
+  //   color: #686365 !important;
+  // }
 .card-text{
   height: 43px;
   min-height: 42px;
@@ -57,7 +60,7 @@ i.fas.fa-database.fa-lg {
   font-family: 'Montserrat' !important;
  }
  #pub {
-  background-color: #83838a !important;
+  background-color: #865BA0 !important;
    border-radius: 4rem;
    font-family: "Muli",sans-serif;
    color: white ;
