--- a/src/app/client/src/app/modules/core/components/space-prominent-filter/space-prominent-filter.component.scss
+++ b/src/app/client/src/app/modules/core/components/space-prominent-filter/space-prominent-filter.component.scss
@@ -21,6 +21,9 @@
         font-weight: 400;
     }
 }
+#search {
+    margin-top: 31px !important;
+}
 
 .ui.segment:first-child {
     margin-top: 0;
