--- a/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.html
+++ b/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.html
@@ -123,7 +123,7 @@
       <p>{{modalMessage}}</p>
     </div>
     <div class="actions">
-      <button class="ui btn btn-lightgrey" (click)="modal.deny('denied')">No</button>
+      <button class="ui btn"  style="background-color: white;border: 1px solid #865BA0;" (click)="modal.deny('denied')">No</button>
       <button class="ui btn btn-purple ml-20" (click)="modal.approve('approved')" autofocus>Yes</button>
     </div>
   </ng-template>
