--- a/src/app/tenant/space/css/custom.css
+++ b/src/app/tenant/space/css/custom.css
@@ -615,7 +615,7 @@ address{margin:0;}
     font-family: 'Muli', sans-serif;
   }
   .btn-purple {
-	background-color: #865BA0 !important;
+	background-color: #72458d !important;
 	border-radius:4px !important;
 	border: none;
 	color:#fff !important;
@@ -636,7 +636,7 @@ address{margin:0;}
 	/*
 	 height: 44px !important;
 	 */
-	max-height: 56px;
+	/* max-height: 56px; */
     vertical-align: middle;
     border-style: none;
 }
@@ -700,7 +700,12 @@ address{margin:0;}
   #ab{
 	border-radius:4px !important;
 	text-align: center;
-	font-weight: bold;
+	font-weight: 400 !important;
+	z-index: 11;
+	font-size: 1.4em !important;
+	height: 47px;
+	padding: 15px !important;
+	margin: 4px;
   }
   .green1 {
 	background-color:lightgreen !important;
@@ -800,8 +805,7 @@ address{margin:0;}
   a.menuItem {
 	font-family: 'Roboto Slab' !important;
 	font-size: 1.25em;
-	font-weight: 600;
-    padding: 12px;
+    padding: 14px;
 }
   
   .ui.icon.button {
@@ -1055,7 +1059,7 @@ a:hover, a:active {
 .ft-1 a {
     text-decoration: none;
     font-size:1.3em;
-	font-family: 'Roboto Slab';
+	font-family: 'Montserrat Light';
     color: #707070 !important;
     cursor: pointer;
 }
@@ -1160,6 +1164,6 @@ a:hover {
 }
 @media (min-width: 1200px) {
 .col-lg-6 {
-    width: 46%;
+    width: 43%;
 }
 }
