--- a/src/app/tenant/space/index.html
+++ b/src/app/tenant/space/index.html
@@ -55,6 +55,7 @@
 	<!-- font awesome-->
 	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
+	<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
 	<!-- Custom CSS -->
 	<link href="css/custom.css" rel="stylesheet">
 
@@ -71,47 +72,54 @@
 <body>
 
 	<!-- Header -->
-	<header class="bg-white p-10" id="nav-bar">
-			<div class="ui logo d-flex flex-ai-center row">
-					<div class="col-2">
-							<span class="navbar-brand ">
-									<a class="flex-ai-center ml-10"><img class="image centered cursor-pointer ml-10" src="images/spacelogonew.png" alt="sunbird.ins"></a>
-								</span>
-							</div>
-							<div class="col navbar-toggle collapsed">
-									<button type="button" class="navbar-toggle collapsed " data-toggle="collapse" data-target="#menu" aria-expanded="false">
-											<span class="sr-only">Toggle navigation</span>
-											<i class="fa fa-bars fa-2x"></i>
-										</button>
-							</div>
-					<div class="col-lg-6">
-					<nav class="navbar-collapse  navbar-right collapse" id="menu" aria-expanded="false" style="height: 1px;">
-							<div class=" ml-auto computer only pr-30 ">
-								<a class="menuItem" onclick="gotoContact('about')">About</a>
-								<a class="menuItem" onclick="gotoResources('explore')">Assets</a>
-								<a class="menuItem" onclick="gotoContact('collaborators')">Collaborators</a>
-								<!-- <a class="menuItem" id="a" onclick="gotoContact('contactUs')">Contact</a> -->
-								<!-- <a class="menuItem" id="a" href="/contactUs">Contact</a> -->
-								<a class="col-lg-push-12 sunblogin menuItem font-weight-bold ml-auto btn btn-purple" href="/resources" id="ab">
-									Sign In </a>
-						</div></nav>
-					</div>
-				
-				
-		
-					<!-- <div class="col-lg-offset-3">
+	<header style="display: flex;" class="bg-white p-10" id="nav-bar">
+		<div class="ui logo d-flex flex-ai-center row">
+			<div class="col-2">
+				<span class="navbar-brand ">
+					<a class="flex-ai-center ml-10"><img class="image centered cursor-pointer ml-10"
+							src="images/spacelogonew.png" alt="sunbird.ins"></a>
+				</span>
+			</div>
+			<div class="col navbar-toggle collapsed">
+				<button type="button" class="navbar-toggle collapsed " data-toggle="collapse" data-target="#menu"
+					aria-expanded="false">
+					<span class="sr-only">Toggle navigation</span>
+					<i class="fa fa-bars fa-2x"></i>
+				</button>
+			</div>
+			
+
+
+
+			<!-- <div class="col-lg-offset-3">
 					<a class="sunblogin menuItem font-weight-bold ml-auto btn btn-purple" href="/resources" id="ab">
 									Sign In </a>
 					</div> -->
-			
-					</div>
-		</div>
-		<div class="container">
 
+		</div>
+		</div>
+		<div style="display: flex;margin-right: 0;" class="container">
+			<div class="col-lg-6">
+				<nav class="navbar-collapse collapse" id="menu" aria-expanded="false"
+					style="height: 1px;margin-top: 22px;margin-left: 30px;">
+					<div class="computer only">
+						<a class="menuItem" onclick="gotoContact('about')">About</a>
+						<a class="menuItem" onclick="gotoResources('explore')">Assets</a>
+						<a class="menuItem" onclick="gotoContact('collaborators')">Collaborators</a>
+						<!-- <a class="menuItem" id="a" onclick="gotoContact('contactUs')">Contact</a> -->
+						<!-- <a class="menuItem" id="a" href="/contactUs">Contact</a> -->
+						
+					</div>
+				</nav>
+			</div>
+			<div style="width: 46%;">
+				<a class="col-lg-push-12 sunblogin menuItem font-weight-bold ml-auto btn btn-purple"
+							href="/resources" id="ab">
+							Sign In </a>
+			</div>
 		</div>
 	</header>
 	<!-- /Header -->
-
 
 	<!-- Slideshow -->
 	<div class="">
@@ -124,16 +132,17 @@
 						<div class="slide-details text-center text-white">
 							<div class="container-1">
 								<!-- <p class="fax"> Welcome to Societal Platform Assets Collaboration Environment</p> -->
-								<p class="text"> A place to search, discover and share assets including concepts, methods, processes, software, hardware and data.
+								<p class="text"> A place to search, discover and share assets including concepts,
+									methods, processes, software, hardware and data.
 								</p>
 								<br> <button class="ui explore btn btn-purple button flex-as-center mr-20" tabindex="0"
-									  onclick="gotoResources('explore')">
+									onclick="gotoResources('explore')">
 									Explore
 								</button>
 							</div>
 						</div>
 					</div>
-					<!-- <div class="item"><img src="images/spacebannernew.jpg" alt="GTA V">
+					<!-- <div class="item"><img src="images/banner_bg.jpg" alt="GTA V">
 						<div class="slide-details text-center text-white">
 							<div class="container">
 								<p class="fax2">Explore Thinking</p>
@@ -148,7 +157,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="item"><img src="images/spacebannernew.jpg" alt="Mirror Edge">
+					<div class="item"><img src="images/banner_bg.jpg" alt="Mirror Edge">
 						<div class="slide-details text-center text-white">
 							<div class="container">
 								<p class="fax2">Core Values</p>
@@ -161,8 +170,7 @@
 							</div>
 						</div>
 					</div>
-
-					<div class="item"><img src="images/spacebannernew.jpg" alt="Mirror Edge">
+					<div class="item"><img src="images/banner_bg.jpg" alt="Mirror Edge">
 						<div class="slide-details text-center text-white">
 							<div class="container">
 								<p class="fax">Framework</p>
@@ -179,8 +187,8 @@
 						</div>
 					</div> -->
 				</div>
-				</div>
-				<!-- /SlideShow Item-->
+			</div>
+			<!-- /SlideShow Item-->
 			<!-- </div> -->
 		</div>
 	</div>
@@ -189,7 +197,7 @@
 
 
 
-
+	<hr style="border-top: 1px solid #cecbcb;">
 	<!-- Footer -->
 	<footer class="footer1 container " *ngIf="showFooter" [class.changePadding]="padding === true">
 		<div class="ui container">
@@ -197,7 +205,7 @@
 			<div class="">
 				<div class="row pt-2 pb-2">
 					<!-- <div class="col-lg-3 col-sm-12 col-md-4 text-pp-crt  mt-15 "> -->
-						<!-- <div class="row">
+					<!-- <div class="row">
 							<div _ngcontent-c3="" class="ft-1 font" role="banner">
 								<p><a href="https://societalplatform.org/code-of-sharing/" class="cmnlink"
 										style="font-family: 'Muli', sans-serif;" target="_blank" >Societal
@@ -208,18 +216,18 @@
 										us on Twitter</a></p>
 							</div>
 						</div> -->
-						<div class="col">
-							<div class="row">
-                <div _ngcontent-c3="" class="ft-1 font" role="banner">
-                     <!-- <p class="p"> EkStep Foundation </p>
+					<div class="col">
+						<div class="row">
+							<div _ngcontent-c3="" class="ft-1 font" role="banner">
+								<!-- <p class="p"> EkStep Foundation </p>
                      <p class="p"><a href="space@societalplatform.org" style="font-family: 'Muli', sans-serif;" target="_blank" class=""></a>   email: space@societalplatform.org</p> -->
-										 <p class="p"><a onclick="footer('policy')">Data and Privacy Policy </a> </p>
-										 <p class="p"> <a onclick="footer('termsOfUse')" >Terms of Use </a> </p>
-										 <p class="p"> <a onclick="footer('process')">Grievance Redressal Process </a> </p>
-										 <p class="p"> <a onclick="footer('licensepolicy')">License Policy </a> </p>
-										 <p class="p"> <a onclick="footer('assetguidelines')">Asset Guidelines </a> </p>
-                  </div>
-              </div>
+								<p class="p"><a onclick="footer('policy')">Data and Privacy Policy </a> </p>
+								<p class="p"> <a onclick="footer('termsOfUse')">Terms of Use </a> </p>
+								<p class="p"> <a onclick="footer('process')">Grievance Redressal Process </a> </p>
+								<p class="p"> <a onclick="footer('licensepolicy')">License Policy </a> </p>
+								<p class="p"> <a onclick="footer('assetguidelines')">Asset Guidelines </a> </p>
+							</div>
+						</div>
 					</div>
 					<!-- <div class="col-lg-6 pr-5 col-md-5 col-sm-12 text-pp-crt-rg  mt-15" style="padding:0 1em;">
 						<div class="row font">
@@ -245,10 +253,10 @@
 									Karnataka, INDIA</p>
 							</div>
 							<div>
-								<a href="mailto: space@societalplatform.org" style="font-family: 'Muli', sans-serif;" class="link"
-									target="_blank" class="footer__link">space@societalplatform.org</a>
+								<a href="mailto: space@societalplatform.org" style="font-family: 'Muli', sans-serif;"
+									class="link" target="_blank" class="footer__link">space@societalplatform.org</a>
 							</div>
-						
+
 						</div>
 					</div>
 				</div>
