new header font and framework picker fixed

--- a/src/app/client/src/app/modules/core/components/framework-picker/framework-picker.component.scss
+++ b/src/app/client/src/app/modules/core/components/framework-picker/framework-picker.component.scss
@@ -6,6 +6,9 @@ input {
 
 .treepicker-parent input {
     background: #f6f6f6 !important;
+    font-size: 14px;
+    font-family: 'Montserrat';
+    font-weight: 500 !important;
 }
 
 #treePicker {
