--- a/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.scss
+++ b/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.scss
@@ -55,6 +55,7 @@ i.fas.fa-database.fa-lg {
  }
  span {
   font-family: 'Montserrat' !important;
+  font-weight: 500 !important;
  }
  #pub {
   background-color: #865BA0 !important;
@@ -178,11 +179,13 @@ i.fas.fa-database.fa-lg {
 }
 button {
   font-family: 'Montserrat' !important;
+  font-weight: 500 !important;
 }
 .card-body {
   height: 17rem;
-  // font-family: 'Montserrat';
-  font-family: 'Montserrat Light' !important;
+   font-family: 'Montserrat';
+   font-weight: 500 !important;
+ // font-family: 'Montserrat Light' !important;
   p {
     font-size: 15px;
   }
@@ -198,6 +201,9 @@ button {
   font-weight: 700;
   box-shadow: none;
   cursor: pointer;
+}
+.btn-purple {
+  background-color: #865BA0 !important;
 }
 .modal {
   height: unset !important;
