--- a/src/app/client/src/app/modules/public/components/assetguidelines/assetguidelines.component.scss
+++ b/src/app/client/src/app/modules/public/components/assetguidelines/assetguidelines.component.scss
@@ -20,11 +20,12 @@
     margin: auto;
     display: block;
     font-size: 17px;
+    font-weight: 500 !important;
     font-family: 'Montserrat';
   }
   .text-ac {
-    font-family: 'Roboto Slab';
-    font-weight: bold;
+    font-family: 'CampaignMedium';
+    // font-weight: bold;
   }
   .text p {
     line-height: 2em;
