--- a/src/app/client/src/app/modules/public/components/licensepolicy/licensepolicy.component.scss
+++ b/src/app/client/src/app/modules/public/components/licensepolicy/licensepolicy.component.scss
@@ -22,10 +22,11 @@
     font-size: 17px;
     line-height: 2rem;
     font-family: 'Montserrat';
+    font-weight: 500 !important;
   }
   .text-ac {
-    font-family: 'Roboto Slab';
-    font-weight: bold;
+    font-family: 'CampaignMedium';
+   // font-weight: bold;
   }
   ul li {
     margin-bottom: 0;
