--- a/src/app/client/src/app/plugins/profile/components/update-contact-details/update-contact-details.component.scss
+++ b/src/app/client/src/app/plugins/profile/components/update-contact-details/update-contact-details.component.scss
@@ -27,6 +27,7 @@
 }
 span {
   font-family: 'Montserrat' !important;
+  font-weight: 500 !important;
 }
 .ui.left.icon.input .icon {
   //left: 11px;
