--- a/src/app/client/src/assets/styles/styles.scss
+++ b/src/app/client/src/assets/styles/styles.scss
@@ -43,6 +43,7 @@
 }
 
 h5 {
-  font-family: 'Roboto Slab' !important;
-  font-weight: 500;
+  font-family: 'CampaignMedium' !important;
+ // font-weight: 500;
+ font-weight: 500 !important;
 }
