--- a/src/app/client/src/app/modules/core/components/space-footer/space-footer.component.scss
+++ b/src/app/client/src/app/modules/core/components/space-footer/space-footer.component.scss
@@ -55,6 +55,7 @@ font-family: 'Muli', sans-serif;
 }
 .text{
     font-family:'Montserrat' !important; 
+    font-weight: 500 !important;
     color: black;
   }
 hr{
