--- a/src/app/client/src/app/modules/myassets/components/create-asset/create-asset.component.scss
+++ b/src/app/client/src/app/modules/myassets/components/create-asset/create-asset.component.scss
@@ -3,7 +3,7 @@
 h4 {
     font-size: 40px;
     color: #636363;
-    font-family: 'Roboto Slab';
+    font-family: 'CampaignMedium';
 }
 .container {
     width: 950px !important;
@@ -18,7 +18,7 @@ h4 {
      font-family: 'Montserrat';
      font-size: 15px;
      text-transform: uppercase;
-     font-weight: 700;
+     font-weight: 500 !important;
      box-shadow: none;
      cursor: pointer;
    }
@@ -37,14 +37,14 @@ h4 {
      font-size: 15px;
      width: 120px;
      text-transform: uppercase;
-     font-weight: 700;
+     font-weight: 500 !important;
      box-shadow: none;
      cursor: pointer;
    }
-   .label {
-    font-family: 'Roboto Slab';
+   label {
+    font-family: 'CampaignMedium';
     font-size: 1.25em;
-    font-weight: 400;
+    font-weight: 500 !important;
 }
    @media screen and (min-width:320px) and (max-width:980px) {
     .container {
