--- a/src/app/client/src/app/modules/myassets/components/update-resoure-form/update-resoure-form.component.scss
+++ b/src/app/client/src/app/modules/myassets/components/update-resoure-form/update-resoure-form.component.scss
@@ -17,9 +17,10 @@
 }
 .field {
     label {
-        font-family: 'Roboto Slab';
+        font-family: 'CampaignMedium';
         font-size: 1.25em;
-        font-weight: 400;
+        font-weight: 500 !important;
+       // font-weight: 400;
     }
 }
 hr {
