--- a/src/app/client/src/app/modules/public/components/blog/blog.component.css
+++ b/src/app/client/src/app/modules/public/components/blog/blog.component.css
@@ -21,10 +21,11 @@
     display: block;
     font-size: 17px;
     font-family: 'Montserrat';
+    font-weight: 500 !important;
   }
   .text-ac {
-    font-family: 'Roboto Slab';
-    font-weight: bold;
+    font-family: 'CampaignMedium';
+    /* font-weight: bold; */
   }
   .text p {
     line-height: 2em;
