--- a/src/app/client/src/app/modules/public/components/common-license/common-license.component.css
+++ b/src/app/client/src/app/modules/public/components/common-license/common-license.component.css
@@ -24,10 +24,11 @@
     font-size: 17px;
     line-height: 2em;
     font-family: 'Montserrat';
+    font-weight: 500 !important;
   }
   .text-ac {
-    font-family: 'Roboto Slab';
-    font-weight: bold;
+    font-family: 'CampaignMedium';
+    /* font-weight: bold; */
   }
   ol li {
     line-height: 2em;
