--- a/src/app/client/src/app/modules/resource/components/shared-detail-page/shared-detail-page.component.scss
+++ b/src/app/client/src/app/modules/resource/components/shared-detail-page/shared-detail-page.component.scss
@@ -27,6 +27,10 @@
     display: -webkit-inline-box;
     list-style: none;
     font-family: 'Montserrat' !important;
+    font-weight: 500 !important;
+  }
+  .btn-purple {
+    background-color: #865BA0 !important;
   }
   h5 {
     padding-top: 0.5rem;
@@ -40,7 +44,7 @@
 }
 .card {
  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
- font-family: 'Roboto Slab';
+ font-family: 'CampaignMedium';
 }
 .card-body {
   font-family: 'Montserrat Light' !important;
