--- a/src/app/client/src/app/modules/shared/components/space-custom-multi-select/space-custom-multi-select.component.scss
+++ b/src/app/client/src/app/modules/shared/components/space-custom-multi-select/space-custom-multi-select.component.scss
@@ -7,12 +7,17 @@
 .ui.selection.multiselect-square-border .multi-select-dropdown.multi-select-padding {
   padding: 7px 5px !important;
 }
+::ng-deep .ui.multiple.dropdown .text {
+  font-size: 14px !important;
+  font-family: 'Montserrat';
+  font-weight: 500 !important;
+}
 .template-checkbox {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap !important;
   align-items: center;
-  font-size: 12px !important;
+  font-size: 13px !important;
   line-height: 1.4;
 }
 .ui.selection.multiselect-square-border {
