--- a/src/app/client/src/app/modules/spacehome/component/space-main-home/space-main-home.component.scss
+++ b/src/app/client/src/app/modules/spacehome/component/space-main-home/space-main-home.component.scss
@@ -23,12 +23,13 @@
      display: block;
      font-size: 17px;
      font-family: 'Montserrat';
+     font-weight: 500 !important;
      margin-bottom: 1rem !important;
  }
  .fa-1{
   font-size: 32px;
-  font-weight: 700;
-  font-family: 'Roboto Slab',Bold;
+ // font-weight: 700;
+  font-family: 'CampaignMedium',Bold;
   margin-bottom: 0!important;
  }
  .text-1{
