--- a/src/app/tenant/space/css/custom.css
+++ b/src/app/tenant/space/css/custom.css
@@ -34,8 +34,17 @@ body{
 	font-family: 'Muli', sans-serif;
 	overflow-x: hidden;
 }
+@font-face {
+	font-family: 'CampaignMedium';
+	src: url('../fonts/CampaignMedium.woff');
+	font-style: normal !important;
+	font-weight: 500 !important;
+}
 .margint5{
 	margin-top:5px;
+}
+.partnerTitle {
+	font-family: 'CampaignMedium' !important;
 }
 .padding10{
 	padding:10px;
@@ -612,20 +621,21 @@ address{margin:0;}
     display: block;
 	font-size: 17px;
 	color: black;
-    font-family: 'Muli', sans-serif;
+    font-family: 'Montserrat';
+    font-weight: 400;
   }
   .btn-purple {
-	background-color: #72458d !important;
+	background-color: #865BA0 !important;
 	border-radius:4px !important;
 	border: none;
 	color:#fff !important;
 	border-radius: 5px;
 	height: 40px;
-	font-family: "Muli",sans-serif;
+	font-family: 'CampaignMedium';
 	font-size: 15px;
 	width: fit-content;
 	/* text-transform: uppercase; */
-	font-weight: 700;
+	font-weight: 500;
 	box-shadow: none;
 	cursor: pointer;
   }
@@ -803,7 +813,7 @@ address{margin:0;}
 	margin-right: 10px;
   }
   a.menuItem {
-	font-family: 'Roboto Slab' !important;
+	font-family: 'CampaignMedium' !important;
 	font-size: 1.25em;
     padding: 14px;
 }
